--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <link rel="stylehseet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"/>
+        <!--used external CSS example provided, not really aware of many others.-->
+        <title>Assignment Regarding HTML Structure</title>
+    </head>
+    <body>
+
+    </body>
+</html>
